Fixed bug #47564 (unpacking unsigned long 32bit bit endian returns wrong result)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@280377 c90b9560-bf6c-de11-be94-00142212c4b1